# rust-portfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  content.json  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
public/: robots.txt  sitemap.xml
src/: content.rs  gsap.rs  main.rs
src/components/: contact.rs  experience.rs  header.rs  hero.rs  insights.rs  mod.rs  philosophy.rs  projects.rs  recognition.rs  skills.rs  splash.rs  ticker.rs
styles/: input.css  portfolio.css
