[package]
name = "leptos-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos                   = { version = "0.7", features = ["csr"] }
leptos_meta              = { version = "0.7" }
wasm-bindgen             = "0.2"
js-sys                   = "0.3"
console_error_panic_hook = "0.1"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"

[dependencies.web-sys]
version  = "0.3"
features = ["Window"]
# All cursor/rAF/DOM work is done inside wasm_bindgen inline_js blocks in gsap.rs,
# so we only need Window for set_timeout_with_callback_and_timeout_and_arguments_0.

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"